# dyn_signup

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Pipfile  TODOS.md  mailing_list.py  manage.py  pyproject.toml  requirements.txt  setup.cfg
accounts/: admin.py  admin_custom_views.py  admin_inline.py  admin_operation.py  format.py  forms.py  models.py  resource.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0001_squashed_0015_expensefile_expense_report.py  0002_signupoperation.py  0003_auto_20221218_2017.py  0004_bill_date.py  0005_bill_amount.py  0006_alter_signupoperation_options.py  0007_operationvalidation_validation_type.py  0008_alter_operationvalidation_content_type_and_more.py  0009_expensereport_signed_expensereport_submitted_date.py  0011_delete_justification.py  0012_justification.py  (+9 more)
connectors/: ovh.py
dynasignup/: asgi.py  mixins.py  settings.py  urls.py  wsgi.py
features/: GroupDetails.feature  create_group.feature  login.feature  signup.feature
newsletter/: views.py
reunion/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
signup/: admin.py  forms.py  models.py  urls.py  views.py
signup2022/: admin.py  admin_views.py  apps.py  converters.py  forms.py  mixins.py  models.py  ovh.py  signals.py  urls.py  views.py
signup2023/: admin.py  admin_views.py  apps.py  converters.py  forms.py  mixins.py  models.py  urls.py  views.py
signup2026/: admin.py  admin_views.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
templates/: base.html  base_login.html
test/: test_signup.py
tests/: conftest.py  test_admin_pages.py  test_create_group.py  test_group_edit.py  test_login.py  test_login_admin.py  test_mailing_list.py
(+169 files in other folders)
