[project]
name = "dyn-signup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap4>=2024.10",
    "django-bootstrap4>=24.4",
    "django~=4.0",
    "django-crispy-forms>=2.3",
    "django-import-export>=4.3.3",
    "django-magiclink>=1.3.0",
    "django-object-actions~=4.1.0",
    "django-tables2>=2.7.5",
    "gunicorn>=23.0.0",
    "ovh~=1.0.0",
    "pytest-bdd~=5.0.0",
    "python-decouple>=3.8",
    "tablib~=3.3",
    "whitenoise>=6.8.2",
    "django-phonenumber-field[phonenumbers]~=7.0.2",
]
