[project]
name = "dyn-signup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap4>=2024.10",
    "django-bootstrap4>=24.4",
    "django>=5.1",
    "django-crispy-forms>=2.3",
    "django-import-export>=4.3.3",
    "django-magiclink>=1.3.0",
    "django-object-actions~=4.1.0",
    "django-tables2>=2.7.5",
    "gunicorn>=23.0.0",
    "ovh~=1.0.0",
    "python-decouple>=3.8",
    "tablib~=3.3",
    "whitenoise>=6.8.2",
    "django-phonenumber-field[phonenumbers]~=7.0.2",
    "schwifty>=2025.1.0",
]

[dependency-groups]
dev = [
    "model-bakery>=1.20.0",
    "pytest-bdd==8.1.0",
    "pytest-django>=4.9.0",
    "pytest==8.3.4",
    "ruff>=0.8.6",
    "pytest-selenium>=4.1.0",
    "webdriver-manager>=4.0.2",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "dynasignup.settings"
addopts = "--reuse-db --driver Chrome"

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = ["I", "B", "Q"]
